# uSonifier

./: .gitignore  CMakeLists.txt  README.md
bin_temp/: CMakeCache.txt  CMakeLists.txt  DispToSonif  Makefile
src/: main.cpp  main.cpp~  pch.h  pch.h~
src/CSoundManager/: CSoundManager.h
src/Cuda/: cpyToShared.h  cuda.cpp~  cuda.cu  cuda.cu~  cuda.h  cuda.h~  cudamj.cpp  cudamj.cpp~  cudamj.hpp  cudamj.hpp~  improc.cu  improc.h  macher.cu  macher.h  temp.cu
src/PID/: cameractrl.cpp  cameractrl.cpp~  cameractrl.h~
